Tue May  4 16:23:26 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/amh_si.cpp:
        * TAO_IDL/be/be_visitor_operation/proxy_impl_xh.cpp:
        * TAO_IDL/be/be_visitor_operation/direct_proxy_impl_ss.cpp:
        * TAO_IDL/be/be_visitor_operation/tie_sh.cpp:
        * TAO_IDL/be/be_visitor_operation/tie_ss.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype.cpp:
        * TAO_IDL/be/be_interface.cpp:
        
          Fixed several cases where sendc_* operations needed to be
          skipped on the skeleton side.
          
        * tests/IDL_Test/IDL_Test.mpc:
        
          Added empty inline and header file blocks on some projects
          for easier reading in graphic developement environments.

Tue May  4 12:24:49 UTC 2010  Marijke Hengstmengel <m.hengstmengel@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp
        * TAO_IDL/be/be_connector.cpp
        * TAO_IDL/be/be_global.cpp
        * TAO_IDL/be/be_interface.cpp
        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp
        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp
        * TAO_IDL/be/be_visitor_connector/executor_ami_exh.cpp
        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp
        * TAO_IDL/be/be_visitor_connector/facet_ami_exs.cpp
        * TAO_IDL/be/be_visitor_interface/ami4ccm_conn_ex_idl.cpp
        * TAO_IDL/be/be_visitor_interface/ami4ccm_rh_ex_idl.cpp
        * TAO_IDL/be/be_visitor_interface/ami4ccm_sendc_ex_idl.cpp
        * TAO_IDL/be/be_visitor_operation/ami_cs.cpp
        * TAO_IDL/be_include/be_helper.h
        Renaming changes for AMI4CCM:
        Rename interface AMI4CCM from AMI_ to AMI4CCM_. 
        Rename Ports: The_Connector to AMI4CCM_Connector and The_Port to ami4ccm_port,
        change xxx_run to xxx_uses and xxx_provides.
        Rename Callback ami_handler for ami4ccm (not for ami)
        to ReplyHandler ami4ccm_handler.
        Add -GC option implicit to -GM option.
      
